# kcores-copy-performance-tester

./: .gitignore  CMakeLists.txt  LICENSE_en-US  LICENSE_zh-CN  README.md  parallel_copy_linux.c  parallel_copy_windows.c  split_file.sh
